# dnaKmers

./: CMakeLists.txt  README.md  compile.sh  main.cpp
IO/: FastQDataContainer.cpp  FastQDataContainer.h
Process/: CounterBase.cpp  CounterBase.h  MultiThreadCounting.cpp  MultiThreadCounting.h
